[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://apps/modelica_godot/ui/simulation_view.gd" id="1_simview"]

[node name="SimulationView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_simview")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewportContainer" type="SubViewportContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/ViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HSplitContainer/ViewportContainer/SubViewport"]

[node name="SimulationWorld" type="Node2D" parent="HSplitContainer/ViewportContainer/SubViewport"]

[node name="RightPanel" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ParametersPanel" type="PanelContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightPanel/ParametersPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer"]
layout_mode = 2
text = "Parameters"
horizontal_alignment = 1

[node name="SpringParams" type="GridContainer" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="KLabel" type="Label" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer/SpringParams"]
layout_mode = 2
text = "Spring Constant (k):"

[node name="KSpinBox" type="SpinBox" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer/SpringParams"]
layout_mode = 2
min_value = 0.1
max_value = 1000.0
value = 100.0
suffix = "N/m"

[node name="LengthLabel" type="Label" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer/SpringParams"]
layout_mode = 2
text = "Rest Length:"

[node name="LengthSpinBox" type="SpinBox" parent="HSplitContainer/RightPanel/ParametersPanel/VBoxContainer/SpringParams"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
value = 1.0
suffix = "m"

[node name="PlotPanel" type="PanelContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightPanel/PlotPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/RightPanel/PlotPanel/VBoxContainer"]
layout_mode = 2
text = "Plots"
horizontal_alignment = 1

[node name="PlotContainer" type="Control" parent="HSplitContainer/RightPanel/PlotPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3 